--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,9 @@ set(
     rdkafka_aux.c
     rdkafka_background.c
     rdkafka_idempotence.c
+    rdkafka_txnmgr.c
     rdkafka_cert.c
+    rdkafka_coord.c
     rdkafka_mock.c
     rdkafka_mock_handlers.c
     rdlist.c
