--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ matrix:
    compiler: gcc
    env: NO_ARTIFACTS=y
    before_script:
-    - ./configure --enable-devel --disable-lz4-ext
+    - ./configure --enable-devel --disable-lz4-ext --prefix="$PWD/dest"
     - ./packaging/tools/rdutcoverage.sh
 
 install:
