configure libssl static: disable features we don't need
These options are taken from the Debian package rules.

Additional changes:
 * make sure perl is installed on travis - required by openssl installer
 * always reconfigure openssl, don't try to be smart.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,17 @@ language: c
 dist: trusty
 sudo: false
 cache: ccache
+
 env:
  global:
   - ARCH=x64
+
+addons:
+  apt:
+    packages:
+    # required by openssl installer
+    - perl
+
 matrix:
  include:
  - name: "Linux GCC: +centos +debian"
