--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="..\..\tests\0098-consumer-txn.cpp" />
     <ClCompile Include="..\..\tests\0099-commit_metadata.c" />
     <ClCompile Include="..\..\tests\0100-thread_interceptors.cpp" />
+    <ClCompile Include="..\..\tests\0101-fetch-from-follower.cpp" />
     <ClCompile Include="..\..\tests\0102-static_group_rebalance.c" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
