rack metadata proposal w/ abi compatibility
added integ test to CMakeLists

added broker metadata test to win32 tests

removed unused includes from test

moved broker_metadata test index to 0105

--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="..\..\tests\0101-fetch-from-follower.cpp" />
     <ClCompile Include="..\..\tests\0102-static_group_rebalance.c" />
     <ClCompile Include="..\..\tests\0104-fetch_from_follower_mock.c" />
+    <ClCompile Include="..\..\tests\0105-broker_metadata.c" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
