Monitor test resource usage

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,7 +4,9 @@ OBJS	  = $(TESTSRCS_C:%.c=%.o) $(TESTSRCS_CXX:%.cpp=%.o)
 
 BIN	  = test-runner
 LIBS	 += -lrdkafka++ -lrdkafka -lstdc++
-OBJS	 += test.o testcpp.o tinycthread.o tinycthread_extra.o rdlist.o sockem.o sockem_ctrl.o
+OBJS	 += test.o rusage.o testcpp.o \
+		tinycthread.o tinycthread_extra.o rdlist.o sockem.o \
+		sockem_ctrl.o
 CFLAGS += -I../src
 CXXFLAGS += -I../src -I../src-cpp
 LDFLAGS += -rdynamic -L../src -L../src-cpp
@@ -140,6 +142,12 @@ compat:
 	./broker_version_tests.py --rdkconf '{"args": "-Q"}' \
 		$(COMPAT_KAFKA_VERSIONS)
 
+
 # Run a full release / PR test.
 # (| is for not running suites in parallel)
 release-test: | asan tsan pristine-full compat
+
+
+# Check resource usage (requires a running cluster environment)
+rusage:
+	./run-test.sh -R bare
