--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -5,6 +5,7 @@ rdkafka_complex_consumer_example
 rdkafka_complex_consumer_example_cpp
 kafkatest_verifiable_client
 producer
+producer_cpp
 consumer
 idempotent_producer
 rdkafka_consume_batch
