Added builtin mock cluster
Enable with `test.mock.num.brokers`.

Currently supports:
 * producer
 * idempotent producer
 * transactional producer
 * low-level consumer with offset commits
 * metadata
 * auto topic creation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(
     0006-symbols.c
     0007-autotopic.c
     0008-reqacks.c
+    0009-mock_cluster.c
     0011-produce_batch.c
     0012-produce_consume.c
     0013-null-msgs.c
