--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,8 @@ set(
     rdkafka_background.c
     rdkafka_idempotence.c
     rdkafka_cert.c
+    rdkafka_mock.c
+    rdkafka_mock_handlers.c
     rdlist.c
     rdlog.c
     rdmurmur2.c
