--- a/src/Makefile
+++ b/src/Makefile
@@ -48,6 +48,7 @@ SRCS=		rdkafka.c rdkafka_broker.c rdkafka_msg.c rdkafka_topic.c \
 		rdkafka_header.c rdkafka_admin.c rdkafka_aux.c \
 		rdkafka_background.c rdkafka_idempotence.c rdkafka_cert.c \
 		rdvarint.c rdbuf.c rdunittest.c \
+		rdkafka_mock.c rdkafka_mock_handlers.c \
 		$(SRCS_y)
 
 HDRS=		rdkafka.h
