--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -94,6 +94,7 @@ set(
     0100-thread_interceptors.cpp
     0101-fetch-from-follower.cpp
     0102-static_group_rebalance.c
+    0104-fetch_from_follower_mock.c
     8000-idle.cpp
     test.c
     testcpp.cpp
