cgrp: Roundrobin assignor handles unsubscribed topics (#2121)
Check next roundrobin consumer is in the topic's eligible list,
otherwise select the next eligible consumer.
Previous code overflowed members[next] and crashed.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -98,6 +98,7 @@ set(
     0104-fetch_from_follower_mock.c
     0105-transactions_mock.c
     0106-cgrp_sess_timeout.c
+    0107-regex_rebalance.c
     0108-client_swname.c
     8000-idle.cpp
     test.c
