Enforce session.timeout.ms in the consumer itself (#2631)
If no successful Heartbeat has been sent in session.timeout.ms
the consumer will trigger a local rebalance (rebalance callback with
error code set to REVOKE_PARTITIONS).
The consumer will rejoin the group when the rebalance has been handled.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -97,6 +97,7 @@ set(
     0103-transactions.c
     0104-fetch_from_follower_mock.c
     0105-transactions_mock.c
+    0106-cgrp_sess_timeout.c
     8000-idle.cpp
     test.c
     testcpp.cpp
