travis: Disable homebrew auto update on old xcode image to avoid timeouts

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,11 @@ matrix:
     - ./configure --install-deps --disable-lz4-ext --prefix="$PWD/dest"
  - name: "OSX clang: +static"
    os: osx
-   # Use an older image to and disable syslog for broader compatibility
+   # Use an older image to disable syslog and for broader compatibility
    # with old and new osx versions.
    osx_image: xcode9.2
    compiler: clang
-   env: LINKAGE=static
+   env: LINKAGE=static HOMEBREW_NO_AUTO_UPDATE=1
    before_script:
     - ./configure --install-deps --disable-lz4-ext --prefix="$PWD/dest" --enable-static --disable-syslog
  - name: "Linux GCC: +integration-tests +copyright-check +doc-check"
