Fix produce/consume hang after partition goes away and comes back (ESC-2569)
When a partition is absent from metadata it is delegated to the
internal broker, if the partition later comes back with the same leader
it would not be delegated back from the internal broker to the proper
leader broker, causing producing and consuming from said partition to stall
until a leader change occurred.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -99,6 +99,7 @@ set(
     0104-fetch_from_follower_mock.c
     0105-transactions_mock.c
     0106-cgrp_sess_timeout.c
+    0107-topic_recreate.c
     0110-batch_size.cpp
     8000-idle.cpp
     test.c
