Ensure CMake sets disabled defines to zero on Windows
This patch fixes CMake builds on Windows, which have been broken since
v1.4.0.

The CMake build for Windows was setting options by defining or not
defining them, whereas for all other platforms options are defined to 1
or 0 to indicate set or not set.

In most code, options are checked with a preprocessor test like `#if
OPTION`, where it doesn't matter if OPTION is undefined or set to zero;
both approaches omit the code within the `#if`. But c426b31e2 introduced
code that requires OPTION to actually be defined to an integral value.

This patch ensures that the CMake configuration sets options to 1/0 when
targeting Windows. Technically only ENABLE_DEVEL needs to have a 1/0
value, but it seemed more future-proof to apply the change proactively
to all options.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,28 +114,44 @@ endif()
 if(WITHOUT_WIN32_CONFIG)
   list(APPEND rdkafka_compile_definitions WITHOUT_WIN32_CONFIG)
   if(WITH_SSL)
-    list(APPEND rdkafka_compile_definitions WITH_SSL)
+    list(APPEND rdkafka_compile_definitions WITH_SSL=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_SSL=0)
   endif(WITH_SSL)
   if(WITH_ZLIB)
-    list(APPEND rdkafka_compile_definitions WITH_ZLIB)
+    list(APPEND rdkafka_compile_definitions WITH_ZLIB=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_ZLIB=0)
   endif(WITH_ZLIB)
   if(WITH_SNAPPY)
-    list(APPEND rdkafka_compile_definitions WITH_SNAPPY)
+    list(APPEND rdkafka_compile_definitions WITH_SNAPPY=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_SNAPPY=0)
   endif(WITH_SNAPPY)
   if(WITH_ZSTD)
-    list(APPEND rdkafka_compile_definitions WITH_ZSTD)
+    list(APPEND rdkafka_compile_definitions WITH_ZSTD=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_ZSTD=0)
   endif(WITH_ZSTD)
   if(WITH_SASL_SCRAM)
-    list(APPEND rdkafka_compile_definitions WITH_SASL_SCRAM)
+    list(APPEND rdkafka_compile_definitions WITH_SASL_SCRAM=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_SASL_SCRAM=0)
   endif(WITH_SASL_SCRAM)
   if(WITH_SASL_OAUTHBEARER)
-    list(APPEND rdkafka_compile_definitions WITH_SASL_OAUTHBEARER)
+    list(APPEND rdkafka_compile_definitions WITH_SASL_OAUTHBEARER=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_SASL_OAUTHBEARER=0)
   endif(WITH_SASL_OAUTHBEARER)
   if(ENABLE_DEVEL)
-    list(APPEND rdkafka_compile_definitions ENABLE_DEVEL)
+    list(APPEND rdkafka_compile_definitions ENABLE_DEVEL=1)
+  else()
+    list(APPEND rdkafka_compile_definitions ENABLE_DEVEL=0)
   endif(ENABLE_DEVEL)
   if(WITH_PLUGINS)
-    list(APPEND rdkafka_compile_definitions WITH_PLUGINS)
+    list(APPEND rdkafka_compile_definitions WITH_PLUGIN=1)
+  else()
+    list(APPEND rdkafka_compile_definitions WITH_PLUGIN=0)
   endif(WITH_PLUGINS)
 endif()
 
