--- a/tests/Makefile
+++ b/tests/Makefile
@@ -15,6 +15,10 @@ LDFLAGS += -rdynamic -L../src -L../src-cpp
 KAFKA_VERSION?=2.4.0
 # Kafka versions for compatibility tests
 COMPAT_KAFKA_VERSIONS?=0.8.2.2 0.9.0.1 0.11.0.3 1.0.2 $(KAFKA_VERSION)
+
+# Non-default scenarios (FIXME: read from scenarios/*)
+SCENARIOS?=noautocreate
+
 -include ../Makefile.config
 
 all: $(BIN) run_par
@@ -150,10 +154,16 @@ compat:
 	./broker_version_tests.py --rdkconf '{"args": "-Q"}' \
 		$(COMPAT_KAFKA_VERSIONS)
 
+# Run non-default scenarios
+scenarios: .PHONY
+	@(for _SCENARIO in $(SCENARIOS) ; do \
+		./broker_version_tests.py --scenario "$$_SCENARIO" $(KAFKA_VERSION) ; \
+	done)
+
 
 # Run a full release / PR test.
 # (| is for not running suites in parallel)
-release-test: | asan tsan pristine-full compat
+release-test: | asan tsan pristine-full scenarios compat
 
 # Check resource usage (requires a running cluster environment)
 rusage:
