Add `topic.metadata.propagation.max.ms` to circumvent topic creation race (#2858)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -102,6 +102,7 @@ set(
     0107-topic_recreate.c
     0109-auto_create_topics.cpp
     0110-batch_size.cpp
+    0111-delay_create_topics.cpp
     8000-idle.cpp
     test.c
     testcpp.cpp
