--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="..\..\tests\0107-topic_recreate.c" />
     <ClCompile Include="..\..\tests\0109-auto_create_topics.cpp" />
     <ClCompile Include="..\..\tests\0110-batch_size.cpp" />
+    <ClCompile Include="..\..\tests\0111-delay_create_topics.cpp" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
