--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,7 @@ image: Visual Studio 2013
 configuration: Release
 environment:
   global:
-    OPENSSL_VERSION: 1.1.1f
+    OPENSSL_VERSION: 1.1.1g
   matrix:
   - platform: x64
   - platform: win32
