--- a/src-cpp/Makefile
+++ b/src-cpp/Makefile
@@ -21,6 +21,9 @@ DISABLE_LDS=y
 MKL_NO_SELFCONTAINED_STATIC_LIB=y
 include ../mklove/Makefile.base
 
+# Use C++ compiler as linker rather than the default C compiler
+CC_LD=$(CXX)
+
 # OSX and Cygwin requires linking required libraries
 ifeq ($(_UNAME_S),Darwin)
 	FWD_LINKING_REQ=y
@@ -34,7 +37,7 @@ endif
 
 # Ignore previously defined library dependencies for the C library,
 # we'll get those dependencies through the C library linkage.
-LIBS := -L../src -lrdkafka -lstdc++
+LIBS := -L../src -lrdkafka
 
 CHECK_FILES+= $(LIBFILENAME) $(LIBNAME).a
 
