--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -167,10 +167,10 @@ if(NOT RDKAFKA_BUILD_STATIC)
   set_property(TARGET rdkafka PROPERTY SOVERSION ${LIBVER})
 endif()
 
-if(MINGW_BUILD)
+if(MINGW)
   # Target Windows 8.1 to match the VS projects (MinGW defaults to an older WinAPI version)
   list(APPEND rdkafka_compile_definitions WINVER=0x0603 _WIN32_WINNT=0x0603 UNICODE)
-endif(MINGW_BUILD)
+endif(MINGW)
 
 # Support '#include <rdkafka.h>'
 target_include_directories(rdkafka PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>")
@@ -179,10 +179,11 @@ if(RDKAFKA_BUILD_STATIC)
   target_compile_definitions(rdkafka PUBLIC LIBRDKAFKA_STATICLIB)
 endif()
 
-if(MINGW_BUILD)
+if(MINGW)
+	message(STATUS "Detected MinGW build")
   # MinGW ignores `#pragma comment(lib, ...)` so we need to specify link libs
   target_link_libraries(rdkafka PUBLIC crypt32 ws2_32 secur32)
-endif(MINGW_BUILD)
+endif(MINGW)
 
 if(WIN32)  
   if(RDKAFKA_BUILD_STATIC)
