KIP-429: Incremental rebalancing (#2884)
* stateful assignor + kip-54 stub

Added owned partitions to consumer metadata

* Clean up warnings

* Changes following review

* Fix ASAN problem

* Added assignor supported protocols field

* Review feedback changes

* Changes from review

* Fix warning

* make test stub 0112 terminate

* Really make test 0112 terminate

* Fix compiler warning

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -104,6 +104,7 @@ set(
     0110-batch_size.cpp
     0111-delay_create_topics.cpp
     0112-assign_unknown_part.c
+    0113-cooperative_rebalance.cpp
     0115-producer_auth.cpp
     0116-kafkaconsumer_close.cpp
     0117-mock_errors.c
