--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="..\..\tests\0110-batch_size.cpp" />
     <ClCompile Include="..\..\tests\0111-delay_create_topics.cpp" />
     <ClCompile Include="..\..\tests\0112-assign_unknown_part.c" />
+    <ClCompile Include="..\..\tests\0113-cooperative_rebalance.cpp" />
     <ClCompile Include="..\..\tests\0115-producer_auth.cpp" />
     <ClCompile Include="..\..\tests\0116-kafkaconsumer_close.cpp" />
     <ClCompile Include="..\..\tests\0117-mock_errors.c" />
