fix mingw build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -306,7 +306,7 @@ install(
     INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
 )
 
-if (WIN32)
+if (MSVC)
   install(FILES $<TARGET_PDB_FILE:rdkafka> DESTINATION "${CMAKE_INSTALL_BINDIR}")
 endif()
 
